--- a/pages/index.html
+++ b/pages/index.html
@@ -109,7 +109,7 @@
                             <h1 class="home__title">Dịch vụ du lịch - giáo dục</h1>
                             <h1 class="home__title">ĐỒNG HÀNH CÙNG NHỮNG CHUYẾN ĐI</h1>
                             <div class="home__btn">
-                                <a href="">explore now</a>
+                                <a href="offers.html">KHÁM PHÁ</a>
                                 <span></span>
                                 <span></span>
                                 <span></span>
@@ -238,7 +238,7 @@
                                             </div>
                                             <div class="tour__item--btn">
                                                 <div class="tour__btn__bgc"></div>
-                                                <a href="#">See more
+                                                <a href="offers.html">Chi tiết
                                                     <span></span>
                                                     <span></span>
                                                     <span></span>
@@ -266,7 +266,7 @@
                                             </div>
                                             <div class="tour__item--btn">
                                                 <div class="tour__btn__bgc"></div>
-                                                <a href="#">See more
+                                                <a href="offers.html">Chi tiết
                                                     <span></span>
                                                     <span></span>
                                                     <span></span>
@@ -283,7 +283,7 @@
                                     <div class="item__content">
                                         <span class="item_date">May 15th - July 01st</span>
                                         <div class="item_center">
-                                            <h1>Phú Quốc</h1>
+                                            <h1>An Giang</h1>
                                             <div class="item_price"></div>
                                             <div class="item_rating">
                                                 <i class="fa fa-star"></i>
@@ -294,7 +294,7 @@
                                             </div>
                                             <div class="tour__item--btn">
                                                 <div class="tour__btn__bgc"></div>
-                                                <a href="#">See more
+                                                <a href="offers.html">Chi tiết
                                                     <span></span>
                                                     <span></span>
                                                     <span></span>
@@ -332,7 +332,7 @@
                             </div>
                             <div class="item--btn">
                                 <div class="btn__bgc"></div>
-                                <a href="#">Book Now
+                                <a href="about.html">Về chúng tôi
                                     <span></span>
                                     <span></span>
                                     <span></span>
