--- a/pages/news.html
+++ b/pages/news.html
@@ -465,6 +465,97 @@
                         </div>
                     </div>
 
+                    <div class="row mg__bt">
+                        <div class="col l-8 m-12 c-12">
+                            <div class="wp__img__blog">
+                                <iframe class="video" src="https://www.youtube.com/embed/uFlwGZDzVSU" title="Chuyến Thăm Hòn Đất - tỉnh Kiên Giang" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                <div class="calendar">
+                                    <a>12</a>
+                                    <span>April, 2022</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col l-4 m-12 c-12">
+                            <!-- <div class="wp_blog_container">
+                                <input type="text">
+                                <i class="fa-solid fa-magnifying-glass"></i>
+                            </div> -->
+                            <div class="wp_archives">
+                                <h3>Chuyến thăm Hòn Đất - Kiên Giang</h3>
+                            </div>
+                            <div class="blog_news">
+                                <p>Bình luận</p>
+                                <div class="wp__img__comment">
+                                    <img src="../asset/img/avt-user.png" alt="" class="avt__user">
+                                    <span>Hoà Trần</span>
+                                    <span class="content__comment">Quê tui mọi người ơi !</span>
+                                </div>
+                                <div class="wp__img__comment">
+                                    <img src="../asset/img/user-nu.webp" alt="" class="avt__user">
+                                    <span>Minh Hiếu</span>
+                                    <span class="content__comment">Hòn Đất đẹp quá</span>
+                                </div>
+                                <div class="wp__img__comment">
+                                    <img src="../asset/img/user-nu.webp" alt="" class="avt__user">
+                                    <span>Mỹ Nhân</span>
+                                    <span class="content__comment">Chuyến đi ý nghĩa</span>
+                                </div>
+                            </div>
+                            <div class="btn__comment">
+                                <input type="text" placeholder="Viết bình luận của bạn">
+                                <input type="submit" name="" value="Gửi">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row mg__bt">
+                        <div class="col l-8 m-12 c-12">
+                            <div class="wp__img__blog">
+                                <iframe class="video" src="https://www.youtube.com/embed/WExVggfFkHg" title="Tiểu sử và quá trình tham gia cách mạng của AHLLVTND Phan Thị Ràng" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                <div class="calendar">
+                                    <a>12</a>
+                                    <span>April, 2022</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col l-4 m-12 c-12">
+                            <!-- <div class="wp_blog_container">
+                                <input type="text">
+                                <i class="fa-solid fa-magnifying-glass"></i>
+                            </div> -->
+                            <div class="wp_archives">
+                                <h3>Tiểu sử và quá trình tham gia Cách mạng của AHLLVTND Phan Thị Ràng</h3>
+                            </div>
+                            <div class="blog_news">
+                                <p>Bình luận</p>
+                                <div class="wp__img__comment">
+                                    <img src="../asset/img/avt-user.png" alt="" class="avt__user">
+                                    <span>Văn Tín</span>
+                                    <span class="content__comment">Đời đời nhớ ơn các anh hùng liệt sỹ</span>
+                                </div>
+                                <div class="wp__img__comment">
+                                    <img src="../asset/img/avt-user.png" alt="" class="avt__user">
+                                    <span>Trung Hiếu</span>
+                                    <span class="content__comment">Hoà bình hôm nay xương máu các anh đổi lấy</span>
+                                </div>
+                                <div class="wp__img__comment">
+                                    <img src="../asset/img/user-nu.webp" alt="" class="avt__user">
+                                    <span>Hồng Đào</span>
+                                    <span class="content__comment">Ý nghĩa quá</span>
+                                </div>
+                                <div class="wp__img__comment">
+                                    <img src="../asset/img/user-nu.webp" alt="" class="avt__user">
+                                    <span>Diệu Anh</span>
+                                    <span class="content__comment">Đời đời nhớ ơn các anh hùng liệt sỹ</span>
+                                </div>
+                            </div>
+                            <div class="btn__comment">
+                                <input type="text" placeholder="Viết bình luận của bạn">
+                                <input type="submit" name="" value="Gửi">
+                            </div>
+                        </div>
+                    </div>
+
                     <!-- <div class="row mg__bt">
                         <div class="col l-8 m-12 c-12">
                             <div class="blog__container__post">
