--- a/pages/offers.html
+++ b/pages/offers.html
@@ -1165,7 +1165,7 @@
                 </div>
                 <p class="title__text__tour">Lịch trình :</p>
 
-                <img src="/asset/img/angiangLichtrinh.png" alt="" srcset="" class="img_lictrinh">
+                <img src="../asset/img/angiangLichtrinh.png" alt="" srcset="" class="img_lictrinh">
 
             </div>
         </div>
