--- a/pages/about.html
+++ b/pages/about.html
@@ -405,7 +405,7 @@
                 </div>
                 <div class="row mg__bt">
                     <div class="col l-8 l-o-2 l c-12 m-12">
-                        <iframe class="video" src="https://www.youtube.com/embed/lyFBpt3wRhs"
+                        <iframe class="video" src="https://www.youtube.com/embed/jpdRSi7E7rs"
                             title="COMINGSOON - KGU TRAVEL" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
